Don't send HEAD to FTP servers behind HTTP proxies.  Bug 148813, r=bbaetz, sr=darin